--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,8 @@ main {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-align: center;
+  margin-bottom: 1.5rem;
 }
 
 p {
@@ -62,10 +64,9 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--color-fourth);
   cursor: pointer;
   transition: border-color 0.25s;
-  width: 50%;
 }
 button:hover {
   border-color: #646cff;
@@ -75,15 +76,9 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+@media screen and (max-width: 1170px) {
+  main {
+    height: auto;
+    margin: 2rem 0;
   }
 }
