--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,13 +3,13 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1rem;
+  flex-wrap: wrap;
+  padding: 1rem 1rem;
   backdrop-filter: blur(10px);
+  gap: 1rem;
 }
 
 .icon-rrss {
-  width: 50%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -23,11 +23,28 @@ footer p {
 footer img {
   /* border: 2px solid red; */
   height: 5vh;
+  width: 100%;
   padding: 5px;
   background-color: #1b6aa7;
   border-radius: 10px;
+  display: flex;
 }
 
 footer img:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+@media screen and (max-width: 768px) {
+  footer{
+    justify-content: center;
+    height: auto;
+  }
+
+  footer p {
+    text-align: center;
+  }
+
+  .icon-rrss {
+    justify-content: center;
+  }
 }
