--- a/src/components/APOD/APOD.css
+++ b/src/components/APOD/APOD.css
@@ -1,15 +1,64 @@
 .copyright {
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    border-radius: 10px;
-    background-color: var(--color-second);
-    color: var(--color-fourth);
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  background-color: var(--color-second);
+  color: var(--color-fourth);
 }
 
-@media screen and (max-width: 768px){
-    .copyright {
-        width: 100%;
-        text-align: center;
-    }
+.info-nasa {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 0.5rem;
+  width: 100%;
+  height: 90%;
+}
+
+.text-nasa {
+  padding: 0 1rem;
+  width: 70%;
+  height: auto;
+  margin-bottom: 1rem;
+}
+
+.img-nasa {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.img-nasa > img {
+  width: 90%;
+  height: 80%;
+  object-fit: cover;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .copyright {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .info-nasa {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+
+  .text-nasa {
+    width: 100%;
+  }
 }
