--- a/src/components/ChangeDate/ChangeDate.css
+++ b/src/components/ChangeDate/ChangeDate.css
@@ -1,8 +1,32 @@
 input {
-    /* background-color: var(--color-third); */
-    border-radius: 5px;
-    padding: 0 10px;
-    color: var(--color-first);
-    font-size: 1rem;
-    font-weight: 600;
+  border-radius: 5px;
+  padding: 0 10px;
+  color: var(--color-first);
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+label {
+  display: flex;
+  align-items: center;
+}
+
+.input-nasa-date {
+  display: flex;
+  gap: 1rem;
+  background-color: var(--color-first);
+  padding: 10px 30px;
+  border-radius: 10px;
+  color: var(--color-fourth);
+  font-size: 0.9rem;
+}
+
+@media screen and (max-width: 540px) {
+  .input-nasa-date {
+    flex-direction: column;
+  }
+
+  label > h3 {
+    text-align: center;
+  }
 }
