--- a/src/components/APOD/APOD.css
+++ b/src/components/APOD/APOD.css
@@ -1,10 +1,5 @@
 .copyright {
-  width: 40%;
-  display: flex;
-  justify-content: center;
-  border-radius: 10px;
-  background-color: var(--color-second);
-  color: var(--color-fourth);
+  font-style: italic;
 }
 
 .info-nasa {
@@ -43,13 +38,6 @@
   text-align: center;
 }
 
-@media screen and (max-width: 768px) {
-  .copyright {
-    width: 100%;
-    text-align: center;
-  }
-}
-
 @media screen and (max-width: 1024px) {
   .info-nasa {
     display: flex;
@@ -60,5 +48,9 @@
 
   .text-nasa {
     width: 100%;
+  }
+
+  .img-nasa {
+    width: 80%;
   }
 }
