--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,55 +1,57 @@
 header {
-    height: 10vh;
-    display: flex;
-    padding: 0 2rem;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    backdrop-filter: blur(10px);
+  height: 10vh;
+  display: flex;
+  padding: 0 2rem;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  backdrop-filter: blur(10px);
+  gap: 2rem;
 }
 
 header a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 header img {
-    height: 100%;
+  height: 100%;
 }
 
 header ul {
-    display: flex;
-    gap: 1rem;
-    list-style-type: none;
+  display: flex;
+  gap: 1rem;
+  list-style-type: none;
 }
 
 header li {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    color: red;
-    font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: red;
+  font-size: 1.1rem;
+  opacity: 1;
 }
 
 header button {
-    width: 100%;
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-    padding: 4px;
-    background-color: transparent;
-    border: 1px solid var(--color-third);
-    color: var(--color-fourth);
+  width: 100%;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  padding: 5px 20px;
+  background-color: transparent;
+  border: 1px solid var(--color-third);
+  color: var(--color-fourth);
 }
 
 @media screen and (max-width: 768px) {
-    header {
-        justify-content: center;
-    }
+  header {
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 1170px) {
-    header {
-        height: auto;
-    }
+  header {
+    height: auto;
+  }
 }
