--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: var(--color-first);
+  text-decoration: none;
+  list-style: none;
 }
 
 body {
@@ -32,9 +35,12 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  transition: transform 0.8s ease-in-out;
 }
+
 a:hover {
   color: #535bf2;
+  transform: scale(1.04);
 }
 
 main {
@@ -43,14 +49,15 @@ main {
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  height: 80vh;
+  min-height: 80vh;
 }
 
 h1 {
+  color: var(--color-fifth);
   font-size: 3.2em;
   line-height: 1.1;
   text-align: center;
-  margin-bottom: 1.5rem;
+  padding: 0 4rem;
 }
 
 p {
@@ -74,6 +81,12 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media screen and (max-width: 425px) {
+  h1 {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 1170px) {
