--- a/src/components/ImagesMars/ImagesMars.css
+++ b/src/components/ImagesMars/ImagesMars.css
@@ -5,8 +5,8 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 1rem;
-  overflow-y: auto;
+  gap: 1.5rem;
+  overflow-y: scroll;
 }
 
 .img-mars img {
