--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -1,6 +1,7 @@
 .section-spinner {
   width: 100%;
-  height: 50vh;
+  height: 50%;
+  margin-bottom: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
