--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,21 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--color-third);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--color-fourth);
+  border-radius: 20px;
+  border: 3px solid var(--color-third);
+}
+
 @media screen and (max-width: 425px) {
   h1 {
     padding: 0;
