--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,32 +1,32 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 }
 
 .container > input {
-    padding: 17px;
-    font-size: 28px;
-    border-width: 7px;
-    border-color: var(--color-second);
-    background-color: var(--color-fourth);
-    color: #4a2c2c;
-    border-style: outset;
-    border-radius: 35px;
-    box-shadow: -7px 15px 15px rgba(66,66,66,.62);
-    text-shadow: 4px 2px 4px rgba(66,66,66,.65);
+  padding: 17px;
+  font-size: 28px;
+  border-width: 7px;
+  border-color: var(--color-second);
+  background-color: var(--color-fourth);
+  color: #4a2c2c;
+  border-style: outset;
+  border-radius: 35px;
+  box-shadow: -7px 15px 15px rgba(66, 66, 66, 0.62);
+  text-shadow: 4px 2px 4px rgba(66, 66, 66, 0.65);
 }
 
 @media screen and (max-width: 1170px) {
-    .container {
-        height: 100vh;
-        justify-content: center;
-    }
+  .container {
+    height: 100vh;
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 450px) {
-    .container > input {
-        font-size: 100%;
-    }
+  .container > input {
+    font-size: 100%;
+  }
 }
